syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "ProductProto";

package productproto;

import "common.proto";

service ProductService {
    rpc healthCheck(EmptyRequest) returns (HealthCheckResponse) {}
    rpc getAllPoints(EmptyRequest) returns (Response) {}
    rpc purchasePoints(PurchasePointsRequest) returns (Response) {}
}

message HealthCheckResponse {
    string status = 1; 
}

message PurchasePointsRequest {
    int32 userId = 1;
    double amount = 2;
}